--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='//fonts.googleapis.com/css?family=Quando' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ "/stylesheets/resumecards.css" | prepend:site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/stylesheets/resumecards.css" | prepend:site.url }}">
     <title>
       {% if site.data.resume.demo %}
         ResumeCards, a Markdown based resume generator.
